--- a/gb/20/7/29/n12290909.md
+++ b/gb/20/7/29/n12290909.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sqmopf394/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sqmopf394/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sqmopf394/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sqmopf394/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sqmopf394/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sqmopf394/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sqmopf394/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sqmopf394/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sqmopf394/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sqmopf394/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sqmopf394/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sqmopf394/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sqmopf394/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sqmopf394/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sqmopf394/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sqmopf394/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/sqmopf394/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sqmopf394/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/sqmopf394/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sqmopf394/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sqmopf394/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sqmopf394/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sqmopf394/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sqmopf394/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>疫情重创就业 维州人严重依赖联邦保工补贴</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1248833523-600x400.jpg" />
 <h6>财政部长弗莱登伯格（Josh Frydenberg）表示：“在350万领取保工薪水补贴的人中，约有97.5万人在维州工作。”（Sam Mooy/Getty Images）
 </h6>
 <hr>
-<p>【大纪元2020年07月29日讯】（大纪元记者郑煦婷澳洲<ahref="https://github.com/sqmopf394/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>编译报导）目前，封锁之中的墨尔本有近100万人依赖联邦政府的保工薪水补贴（JobKeeper）。政府最近宣布将该补贴延长到明年3月，但从10月开始降低补贴额度。财政部长弗莱登伯格（Josh Frydenberg）对这一决定进行了辩护。</p>
-<p>他在接受电台采访时表示：“这依然是很大的支持。在350万领取保工薪水补贴的人中，约有97.5万人在维州<ahref="https://github.com/sqmopf394/djy/blob/master/gb/tag/%E5%B7%A5%E4%BD%9C.md#1">工作</a>。”</p>
-<p>根据政府的新计划，降低补贴额度分为两个阶段。第一阶段，从9月28日至今年年底，补贴将从每两周1500澳元减至每两周1200元。每周<ahref="https://github.com/sqmopf394/djy/blob/master/gb/tag/%E5%B7%A5%E4%BD%9C.md#1">工作</a>时间少于20小时的兼职员工的补贴为每两周750元。</p>
+<p>【大纪元2020年07月29日讯】（大纪元记者郑煦婷澳洲<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>编译报导）目前，封锁之中的墨尔本有近100万人依赖联邦政府的保工薪水补贴（JobKeeper）。政府最近宣布将该补贴延长到明年3月，但从10月开始降低补贴额度。财政部长弗莱登伯格（Josh Frydenberg）对这一决定进行了辩护。</p>
+<p>他在接受电台采访时表示：“这依然是很大的支持。在350万领取保工薪水补贴的人中，约有97.5万人在维州<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B7%A5%E4%BD%9C.md#1">工作</a>。”</p>
+<p>根据政府的新计划，降低补贴额度分为两个阶段。第一阶段，从9月28日至今年年底，补贴将从每两周1500澳元减至每两周1200元。每周<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B7%A5%E4%BD%9C.md#1">工作</a>时间少于20小时的兼职员工的补贴为每两周750元。</p>
 <p>第二阶段，明年的前3个月，补贴减至每两周1000元，工作不足20小时的员工每两周只获得650元的补贴。</p>
 <p>财政部预计，在10月和12月间，四分之三现在领取保工薪水补贴的维州人将继续领补贴。弗莱登伯格表示，这意味着全国约一半的领取者来自维州。</p>
 <p>他说：“我们没有撤销支持。”“1200元依然是很高额度的补贴，相当于最低工资额的80%。”</p>
-<p>财政部于6月份对此计划的审查结果显示，约四分之一领取补贴的人每两周收到的款项（1500元）比其<ahref="https://github.com/sqmopf394/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>前的收入平均高550元。</p>
+<p>财政部于6月份对此计划的审查结果显示，约四分之一领取补贴的人每两周收到的款项（1500元）比其<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>前的收入平均高550元。</p>
 <p>维州州长安德鲁斯（Daniel Andrews）警告说，如果每日新增的COVID-19病例数量居高不下，那么从7月9日开始、为期六周的居家避疫令可能会延长。</p>
 <p>责任编辑：李欣然</p>
 
@@ -20,42 +20,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/3/7/n11922895.md#1">中共病毒：墨尔本医院暂停非紧急手术 有新生儿染疫</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/27/n12288016.md#1">维州养老院现危机 莫里森提前离昆返堪京</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/28/n12288189.md#1">“花纳税人钱为中共代言” ABC节目遭批?</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/28/n12288286.md#1">维州隔离补助发放迟缓 政府承诺提高效率</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/28/n12288565.md#1">担心自身安全 维州政府公务员撤出隔离酒店</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/28/n12288719.md#1">澳Bunnings坚守卫生规定 不戴口罩者拒入店</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/28/n12289229.md#1">外国势力藉社交媒体渗透?抖音遭调查被传唤</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/28/n12288703.md#1">维州试用新技术抓拍开车用手机者 测试期内免罚款</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/27/n12286440.md#1">布里斯班老人染疫五次死里逃生 康复后吁遵守防疫规定</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/28/n12288765.md#1">维州州长支持率再跌 遭联盟党选民抛弃</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/7/n11922895.md#1">维州新增12314例病毒感染 新州新增22255例</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/27/n12288016.md#1">维州养老院现危机 莫里森提前离昆返堪京</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/28/n12288189.md#1">“花纳税人钱为中共代言” ABC节目遭批?</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/28/n12288286.md#1">维州隔离补助发放迟缓 政府承诺提高效率</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/28/n12288565.md#1">担心自身安全 维州政府公务员撤出隔离酒店</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/28/n12288719.md#1">澳Bunnings坚守卫生规定 不戴口罩者拒入店</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/28/n12289229.md#1">外国势力藉社交媒体渗透?抖音遭调查被传唤</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753149.md#1">澳洲学校终止合作 北领地孔子课堂关闭</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753142.md#1">澳总理出访印尼加深商贸合作 讨论安全问题</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752906.md#1">对抗王毅太平洋岛国行 美加强与该地区关系</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/3/n11022591.md#1" target="_blank">玉清心：物理大师束星北 一曲悲怆的挽歌</a></li><li><a href="https://github.com/sqmopf394/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10746220.md#1" target="_blank">觅真：真诚的感恩浸透着民心所向</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/7/n9814027.md#1" target="_blank">十月革命百年 美重磅评论剖析共产主义罪恶</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10744431.md#1" target="_blank">顽疾绝症不医而愈 小小少年们的神奇际遇</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/26/n12285444.md#1">【重播】中共女军官唐娟加州出庭 8.10初审</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/28/n12288825.md#1">泰移工染疫 台政府匡189人 部分检验结果出炉</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/27/n12286850.md#1">潘玮柏惊喜宣布结婚 娶小13岁中国空姐</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/27/n12287863.md#1">【新闻看点】战狼们乌鸦嘴 美重击下习无选择</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/27/n12286173.md#1">在台湾工作的泰国移工返泰 隔离五天后确诊</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/27/n12287645.md#1">自曝当年生子险送命 大S：靠女儿拉出鬼门关</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/28/n12289207.md#1">双方不约而同感激对方 艾成与王瞳登记结婚</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/27/n12286272.md#1">4岁儿被踩断腿 馆长落泪：如果爸爸可以帮你痛</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/27/n12286477.md#1">台主播陈雅琳工作太拼 右眼突失明动刀治疗</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/27/n12287781.md#1">不敌疫情 赌王千金何超莲宣布关闭牛肉面店</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/26/n12284394.md#1">史上唯一会说中文的美国总统 曾在中国工作</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/16/n12259877.md#1">从《傲慢与偏见》谈婚姻幸福：运气或选择？</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/9/12/8/n2747593.md#1">时穷节乃见  为张睢阳齿——张巡</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/20/7/26/n12285091.md#1">被误会时不辩解 君子善利万物而不争</a></li>
-<li><a href="https://github.com/sqmopf394/djy/blob/master/gb/15/12/5/n4589242.md#1">一碗清茶 解解解元之渴  下联怎生妙对？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sqmopf394/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sqmopf394/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/29/n12290909.htm">疫情重创就业 维州人严重依赖联邦保工补贴</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/29/n12290909.htm">疫情重创就业 维州人严重依赖联邦保工补贴</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/sqmopf394/djy/blob/master/gb/20/7/29/n12290909.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sqmopf394/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sqmopf394/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sqmopf394/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sqmopf394/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sqmopf394/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/7/29/n12290909.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
